# Uics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ClassSchedule.cpp  ClassSchedule.h  ExamSchedule.cpp  ExamSchedule.h  FileManagement.h  GUI.cpp  LICENSE  Period.cpp  Period.h  Period_cpp.h  README.md  Uics.sln  Uics.vcxproj  Uics.vcxproj.filters  cal.cpp  cal.h  main.cpp  mainApp.cpp  mainApp.h  mainFrame.cpp  mainFrame.h  mainFrame_cpp.h  p_About.h  p_About_cpp.h  with_ocr.cpp  wxcmake.h
cmake/: CMakeLists.txt  README.md
cmake/include/: ClassSchedule.h  ExamSchedule.h  FileManagement.h  Period.h  cal.h  mainApp.h  mainFrame.h  wxcmake.h
cmake/src/: ClassSchedule.cpp  ExamSchedule.cpp  FileManagement.cpp  Period.cpp  cal.cpp  mainApp.cpp  mainFrame.cpp  mainFrame.h  wxcmake.h
images/: a.tif
include/: ClassSchedule.h  ExamSchedule.h  FileManagement.h  Help.h  Period.h  cal.h  mainApp.h  mainFrame.h  p_About.h  wxcmake.h
ocr_test/: CMakeLists.txt
src/: ClassSchedule.cpp  ExamSchedule.cpp  FileManagement.cpp  Help.cpp  Period.cpp  cal.cpp  mainApp.cpp  mainFrame.cpp  p_About.cpp
test/: CMakeLists.txt  main.cpp
test/ocr_test/: CMakeLists.txt  with_ocr.cpp
test/ocr_test/include/: cal.h
test/saveload_test/: ical_save_1.txt  main.cpp
